[tool.poetry]
name = "plotly_calplot"
version = "0.1.20"
description = "Calendar Plot made with Plotly"
authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
license = "MIT"
repository = "https://github.com/brunorosilva/plotly-calplot"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
plotly = ">=5.23.0"
pandas = ">=2.2.0"
numpy = ">=2.0.0"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
black = ">=24.8.0"
isort = ">=5.13.2"
streamlit = ">=1.37.0"
pytest = ">=8.3.2"
pytest-cov = ">=4.0.0"
flake8 = "^4.0.1"
vulture = "^2.3"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
